[gd_scene format=3 uid="uid://dlevpco8snw5k"]

[ext_resource type="Material" uid="uid://ctqhsf2gopi7n" path="res://carton/cardboard.tres" id="1_y8qu1"]
[ext_resource type="Script" uid="uid://dhcr03f3m0kiw" path="res://ui/button/buttonUI.gd" id="1_y084j"]
[ext_resource type="FontFile" uid="uid://cpeq42uqxplp" path="res://ui/font/drawersketches.ttf" id="3_5yfjs"]

[sub_resource type="BoxMesh" id="BoxMesh_noarx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a202f"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5yfjs"]
spread = 47.375
initial_velocity_min = 0.5
initial_velocity_max = 1.0
scale_min = 0.01
scale_max = 0.03

[sub_resource type="SphereMesh" id="SphereMesh_so3rh"]
material = ExtResource("1_y8qu1")

[node name="Button" type="MeshInstance3D" unique_id=834246769 node_paths=PackedStringArray("_area", "_label")]
transform = Transform3D(0.08210469, 0, 0, 0, 0.7444232, 0, 0, 0, 1.885254, 0, 0, 0)
material_override = ExtResource("1_y8qu1")
mesh = SubResource("BoxMesh_noarx")
script = ExtResource("1_y084j")
_area = NodePath("Area3D")
_label = NodePath("Label3D")
text = "ToWrite"

[node name="Area3D" type="Area3D" parent="." unique_id=1522299017]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0.019411922, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=325102232]
shape = SubResource("BoxShape3D_a202f")

[node name="Label3D" type="Label3D" parent="." unique_id=88919816]
transform = Transform3D(-0.0026317865, -0.0064883707, 0.9998694, 0.0019230841, 1.0006193, 0.006501085, -0.5375932, 0.0036111888, -0.004871601, 0.5040617, 0.0085210875, 0)
shaded = true
modulate = Color(1, 1, 0.25490198, 0.7176471)
outline_modulate = Color(0, 0, 0, 0.49803922)
text = "ToWrite"
font = ExtResource("3_5yfjs")
font_size = 110

[node name="CartonParticle" type="GPUParticles3D" parent="." unique_id=97677059]
transform = Transform3D(1, 0, 0, 0, 0.9999997, 0, 0, 0, 0.99999976, 3.94938, 0, 0.3566351)
emitting = false
amount = 15
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_5yfjs")
draw_pass_1 = SubResource("SphereMesh_so3rh")

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
